# os-tan-widget

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: character.rs  main.rs  monitor.rs
