[package]
name = "OSTan-Widget"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.24.1" 
egui_extras = { version = "0.24.1", features = ["all_loaders"] }

rand = "0.8"
image = { version = "0.24", features = ["png", "jpeg"] }
sysinfo = "0.32"
walkdir = "2.4"
crossbeam-channel = "0.5"

tray-icon = "0.14"

winapi = { version = "0.3", features = ["winuser", "shobjidl", "shellapi", "libloaderapi"] }

rfd = "0.14"

[package.metadata.win]
windows_subsystem = "windows"